# Euclide

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: main.cpp
bench/: CMakeLists.txt  bench_attributes.cpp  bench_axia.cpp  bench_copy_to_points.cpp  bench_cylinder.cpp  bench_grid.cpp  bench_merge.cpp  bench_mesh.cpp  bench_noise.cpp  bench_parser.cpp  bench_subdivide.cpp  bench_transform.cpp
src/app/: CMakeLists.txt  main.cpp
src/app/interface/: engine.cpp  engine.h  interface.cpp  interface.h  window.cpp  window.h
src/app/interface/panels/: connection_item.cpp  connection_item.h  node_graph.cpp  node_graph.h  node_graph_panel.cpp  node_graph_panel.h  node_item.cpp  node_item.h  old_node_graph.cpp  old_node_graph.h  old_viewport.cpp  panel.cpp  panel.h  parameters.cpp  parameters.h  parameters_panel.cpp  parameters_panel.h  spreadsheet_panel.cpp  spreadsheet_panel.h  viewport.cpp  viewport.h  viewport_panel.cpp  viewport_panel.h
src/app/interface/panels/fields/: field_drawer.cpp  field_drawer.h
src/app/interface/panels/graph/: connection_item.cpp  connection_item.h  cutting_line.cpp  cutting_line.h  node_graph.cpp  node_graph.h  node_graph_input_handler.cpp  node_graph_input_handler.h  node_graph_interaction.cpp  node_graph_interaction.h  node_graph_menu.cpp  node_graph_menu.h  node_graph_panel.h  node_graph_renderer.cpp  node_graph_renderer.h  node_item.cpp  node_item.h  node_item_old.cpp  node_item_old.h
src/app/interface/panels/graph/node/: node_item.cpp  node_item.h  node_item_interaction.cpp  node_item_interaction.h  node_item_model.h  node_item_renderer.cpp  node_item_renderer.h
src/app/interface/panels/parameters/: parameters.cpp  parameters.h  parameters_renderer.cpp  parameters_renderer.h
src/app/interface/panels/parameters/fields/: field_drawer.cpp  field_drawer.h
src/app/interface/panels/rendering/: camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  render_model.cpp  render_model.h  renderer.cpp  renderer.h  shader_program.cpp  shader_program.h
src/app/interface/panels/rendering/shaders/: edgeStandard.vert
src/app/interface/panels/spreadsheet/: spreadsheet.cpp  spreadsheet.h  spreadsheet_renderer.cpp  spreadsheet_renderer.h
src/app/interface/panels/viewport/: viewport.cpp  viewport.h  viewport_input_handler.cpp  viewport_input_handler.h  viewport_renderer.cpp  viewport_renderer.h
src/app/interface/panels/viewport/rendering/: camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  render_model.cpp  render_model.h  renderer.cpp  renderer.h  shader_program.cpp  shader_program.h
src/app/interface/panels/viewport/rendering/shaders/: edgeStandard.vert  faceStandard.frag
src/app/interface/utils/: fixed_queue.h  hash.h  imgui_utils.h  string_utils.h
src/core/: CMakeLists.txt
src/core/axia/: ast.h  doc.md  evaluator.cpp  evaluator.h  parser.cpp  parser.h  semantic.cpp  semantic.h  tokenizer.cpp  tokenizer.h
src/core/fields/: float2field.h  float3field.h  float4field.h  int2field.h  node_field.cpp  node_field.h  node_field_visitor.h
src/core/geometry/: attribute.cpp  attribute.h  attribute_impl.h  attribute_set.cpp  attribute_set.h  attribute_types.h  attributes.cpp  attributes.h  halfedge.h  mesh.cpp  mesh.h  points.cpp  points.h  primitive.h  vertex.h
src/core/gpu/: example.cpp  gpu_buffer.cpp  gpu_buffer.h  gpu_compute_task.cpp  gpu_compute_task.h  gpu_descriptor.cpp  gpu_descriptor.h  gpu_device.cpp  gpu_device.h  gpu_manager.cpp  gpu_manager.h  gpu_pipeline.cpp  gpu_pipeline.h
src/core/gpu/shaders/: perlin.hlsl  square.hlsl
src/core/nodes/: node.cpp  node.h  node_connection.h  nodes_info.cpp  nodes_info.h  scene.cpp  scene.h
src/core/nodes/attributes/: attribute_axia.cpp  attribute_axia.h  attribute_create.cpp  attribute_create.h  attribute_math.cpp  attribute_math.h  attribute_noise.cpp  attribute_noise.h  attribute_randomize.cpp  attribute_randomize.h  attribute_rename.cpp  attribute_rename.h  attribute_sax.cpp  attribute_sax.h
src/core/nodes/geometry/: copy_to_points.cpp  copy_to_points.h  cube.cpp  cube.h  merge.cpp  merge.h  smooth_normals.cpp  smooth_normals.h  subdivide.cpp  subdivide.h  transform.cpp  transform.h
src/core/nodes/primitive/: cube.cpp  cube.h  cylinder.cpp  cylinder.h  grid.cpp  grid.h  quad_sphere.cpp  quad_sphere.h
src/core/nodes/utility/: null.cpp  null.h
src/core/sax/: ast.h  doc.md  parser.cpp  parser.h  tokenizer.h
src/core/utils/: alignedAllocator.cpp  allocator_utils.cpp  allocator_utils.h  file.h  hash.h  math.h  observer.h  random.h  simd.h  timer.cpp  timer.h  types.h
tests/: CMakeLists.txt  main.cpp  test_mesh.cpp  test_node.cpp  test_points.cpp
tests/axia/: test_parser.cpp  test_tokenizer.cpp
tests/fields/: test_field.cpp  test_float3.cpp
tests/geometry/: test_attributes.cpp  test_mesh.cpp  test_points.cpp
tests/nodes/: mock_node.h  test_cube.cpp  test_node.cpp  test_scene.cpp
tests/nodes/geometry/: test_merge.cpp  test_transform.cpp
tests/nodes/primitive/: test_cube.cpp  test_cylinder.cpp  test_grid.cpp
tests/sax/: test_parser.cpp
